rancher/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher
  namespace: cattle-system
  labels:
    app: rancher
spec:
  serviceAccountName: rancher-sa
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  template:
    metadata:
      labels:
        app: rancher
    spec:
      containers:
        - name: rancher 
          image: rancher/rancher:v2.13-head
          ports: 
            - containerPort: 80
